Spacing fixes on listings page

--- a/src/app/listings.scss
+++ b/src/app/listings.scss
@@ -77,10 +77,8 @@
 
   .sidebar-header {
     margin: 0;
-    padding: 14px;
-    padding-bottom: 10px;
+    padding: 10px 0;
     font-weight: lighter;
-    opacity: .99;
   }
 
   .subdued {
@@ -89,8 +87,7 @@
 
   .menu-top {
     background-image: url(../images/listings-cta-bg.jpg);
-    padding-top: 4px;
-    padding-bottom: 14px;
+    padding: 30px;
   }
 
   .menu {
@@ -102,7 +99,6 @@
   .light-line {
 	  border-style: solid;
 	  opacity: .9;
-	  width: 94%;
   }
 
   .logo-upper-left {
@@ -127,7 +123,6 @@
 	  > hr {
 	    border-color: #c35440;
 	    opacity: .5;
-	    width: 94%;
 	    border-style: solid;
 	  }
   }
@@ -136,7 +131,7 @@
 	  color: $background-color;
 	  font-family: $font-brand;
 	  letter-spacing: $title-letter-spacing;
-	  padding: 20px;
+	  padding: 30px;
   }
 
   .info-text {
@@ -148,7 +143,7 @@
 	.info-box {
 	  background-color: $primary-color;
 	  display: block;
-	  padding: 21px 14px;
+	  padding: 30px;
 	  color: white;
 	  overflow: hidden;
 	  margin-bottom: 24px;
@@ -156,16 +151,18 @@
 
   .cool-button {
 	  display: block;
-	  margin-left: auto;
-	  margin-right: auto;
 	  padding: 14px 8px;
-	  margin: 20px 12px 12px 12px;
+	  margin: 10px 0;
 	  color: #fff;
 	  border: 2px solid #fff;
 	  text-align: center;
 	  outline: none;
 	  text-decoration: none;
-	  font-size: small;
+      font-size: small;
+      &:hover {
+        color: $primary-color;
+        background-color: white;
+      }
   }
 
   @media screen and (max-width: 1130px) {
